<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_package_select"
    android:id="@+id/relativeLayout_fragmentContainer">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="64sp"
        android:text="@string/title"
        android:textColor="@color/textColor"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="32sp"
        android:text="@string/discount"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:layout_below="@+id/title"/>

    <EditText
        android:id="@+id/amountWanted"
        android:hint="@string/input_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:autofillHints=""
        android:inputType="number"
        android:backgroundTint="@color/UITint"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        />

    <RadioGroup
        android:id="@+id/packageOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amountWanted">

        <RadioButton
            android:id="@+id/exterior"
            android:buttonTint="@color/UITint"
            android:textColor="@color/textColor"
            android:checked="true"
            android:text="@string/outside"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="24sp"/>

        <RadioButton
            android:id="@+id/interior_exterior"
            android:buttonTint="@color/UITint"
            android:textColor="@color/textColor"
            android:text="@string/inside_out"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/calculate_price"
        android:text="@string/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/packageOptions"
        android:layout_marginTop="32sp"/>

    <ImageView
        android:contentDescription="@string/app_name"
        android:paddingTop="64sp"
        android:layout_below="@id/calculate_price"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/carwash" />


</RelativeLayout>
